@@ -67,10 +67,6 @@ int pyfsapfs_volume_init(
 void pyfsapfs_volume_free(
       pyfsapfs_volume_t *pyfsapfs_volume );
 
-PyObject *pyfsapfs_volume_signal_abort(
-           pyfsapfs_volume_t *pyfsapfs_volume,
-           PyObject *arguments );
-
 PyObject *pyfsapfs_volume_open(
            pyfsapfs_volume_t *pyfsapfs_volume,
            PyObject *arguments,
